deployment/live-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-service-deployment
  labels:
    app: live-service

spec:
  replicas: 3
  # Select live-service pods
  selector:
    matchLabels:
      app: live-service
  
  template:
    metadata:
      labels: 
        app: live-service
    spec:
      containers:
      - name: live-service-container
        image: live-service:0.1
        imagePullPolicy: Never # use local image
        ports:
        - containerPort: 5000
        # Probes
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
